--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,9 @@ jobs:
         with:
           go-version: ${{ matrix.go }}
       - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '16'
       - uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go }}
